feat: generate token
